--- a/ThuyTienNguyen_CoursePlannerApp/ThuyTienNguyen_CoursePlannerApp.csproj
+++ b/ThuyTienNguyen_CoursePlannerApp/ThuyTienNguyen_CoursePlannerApp.csproj
@@ -33,6 +33,9 @@
     <Compile Update="Views\CourseViewPage.xaml.cs">
       <DependentUpon>CourseViewPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\MainPage.xaml.cs">
+      <DependentUpon>MainPage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\TermViewPage.xaml.cs">
       <DependentUpon>TermViewPage.xaml</DependentUpon>
     </Compile>
@@ -42,5 +45,11 @@
     <Compile Update="Views\TermsListPage.xaml.cs">
       <DependentUpon>TermsListPage.xaml</DependentUpon>
     </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\MainPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
